# rest-cpp

./: steps to follow while pushing on git
hvac/: CMakeLists.txt
hvac/include/: restApplication.h  restSimulator.h
hvac/src/: restsample.cpp
